[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menus/network/NetworkMenu.gd" type="Script" id=1]

[node name="NetworkMenu" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -724.0
margin_bottom = -600.0
rect_min_size = Vector2( 300, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 14.0
text = "Network"

[node name="Fields" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 260.0
margin_bottom = 86.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Fields"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLabel" type="Label" parent="MarginContainer/VBoxContainer/Fields/GridContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Host:"

[node name="HostLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Fields/GridContainer"]
margin_left = 104.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="MarginContainer/VBoxContainer/Fields/GridContainer"]
margin_top = 33.0
margin_right = 100.0
margin_bottom = 47.0
text = "Port:"

[node name="PortLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Fields/GridContainer"]
margin_left = 104.0
margin_top = 28.0
margin_right = 260.0
margin_bottom = 52.0
text = "9999"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 260.0
margin_bottom = 120.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="ServerButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 115.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 240.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Client"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
